# slack

./: .ocamlformat  Makefile  README.md  dune-project  example  slack.opam
.github/workflows/: action.yml  build-test.yml  lint.yml  opam-dependency-submission.yml
examples/: common_example.ml  dune  echo.ml  examples.ml  get_info.ml  sender.ml
lib/: api.ml  api_local.ml  api_remote.ml  atd_adapters.ml  block_kit.atd  block_kit_safe.ml  common.ml  config.atd  context.ml  dune  mrkdwn.ml  slack.atd  slex.mll  utils.ml
lib_test/: dune  slack_payloads.expected  test.ml  test_block_kit.ml
lib_test/mock-slack-events/: channel_created.json  link_shared.json  links_shared.json  message_bot.json  message_bot_upload_file.json  message_in_thread.json  message_private.json  message_send_as_user.json  message_updated.json
lib_test/mock-slack-interactions/: block_action1.json  block_action2.json  global_shortcut.json  message_shortcut.json  message_shortcut.www  view_closed.json  view_submission.json
lib_test/mrkdwn/: dune  mrkdwn_of_md.ml  mrkdwn_of_md.t
lib_test/slack-api-cache/: C047C6ECFNX_join  C049XFXK286  C049XFXK286_history  C049XFXK286_join  C04CXBYNC68  C04CXBYNC68_history  C1RQ000_Bk033XFJ9BTJ_edit_bookmark  C1RQ000__edit_bookmark  C1RQ000_list_bookmarks  D049WPTCGMC  D049WPTCGMC_1675329533.687169_replies  D049WPTCGMC_1675329534.687279_replies  D049WPTCGMC_1675329544.950899_replies  D049WPTCGMC_1675330543.480229_replies  D049WPTCGMC_history  S04NV4DF0LQ_list_usergroup_users  S04NV4DF0LQ_usergroup_users  S04XV4DF0LQ_usergroup_users  T0475L7BATY_usergroups_list  U046XN0M2R5  U04A3C2LC6N  UG3UGF1AM  dXNlcjpVMDQ2WE4wTTJSNQ==_list_users  im,mpim_list_conversations  public_channel_list_conversations  ref1_open_views  ref1_push_views  ref1_update_views
