opam-version: "2.0"
name: "slack"
version: "0.1"
license: "MIT"
maintainer: "Ahrefs <github@ahrefs.com>"
authors: "Ahrefs <github@ahrefs.com>"
homepage: "https://github.com/ahrefs/slack"
bug-reports: "https://github.com/ahrefs/slack/issues"
dev-repo: "git+https://github.com/ahrefs/slack.git"

synopsis: "Slack API implementation."
description: "OCaml interface for accessing Slack APIs and receiving events."

depends: [
  "dune"
  "atdgen" {> "2.0.0"}
  "atdgen-runtime" {> "2.0.0"}
  "devkit" {>= "1.4+20200305" }
  "extlib" {>= "1.7.7"}
  "biniou"
  "cstruct"
  "hex"
  "lwt" {>= "5.1.0"}
  "nocrypto"
  "uri"
  "yojson"
]
