opam-version: "2.0"
name: "slack"
version: "0.1"
license: "MIT"
maintainer: "Ahrefs <github@ahrefs.com>"
authors: "Ahrefs <github@ahrefs.com>"
homepage: "https://github.com/ahrefs/slack"
bug-reports: "https://github.com/ahrefs/slack/issues"
dev-repo: "git+https://github.com/ahrefs/slack.git"

synopsis: "Slack API implementation"
description: "OCaml interface for accessing Slack APIs and receiving events."

depends: [
  "dune" {>= "3.4"}
  "atdgen" {> "2.0.0"}
  "atdgen-runtime" {> "2.0.0"}
  "biniou"
  "cstruct"
  "cmarkit"
  "cmdliner"
  "devkit" {>= "1.20210517" }
  "extlib" {>= "1.7.7"}
  "hex"
  "lwt" {>= "5.1.0"}
  "lwt_ppx"
  "nocrypto"
  "ppx_deriving"
  "re2"
  "uri"
  "yojson"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
    "@runtest" {with-test}
  ]
]
